# qa-api-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 00beab97bf24_create_questions_and_answers_tables.py
app/: config.py  database.py  main.py  models.py  router.py  schemas.py
tests/: conftest.py  test_questions.py
